Z-index fixed

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -80,6 +80,8 @@ body {
   height: 30vh;
   text-decoration: none;
   text-align: left;
+  border-top: 100px;
+  border-bottom: 100px;
 
 }
 
@@ -108,7 +110,7 @@ body {
   width: 80vw;
   font-family: 'Tomorrow', sans-serif;
   align-self: center;
-  z-index: 10;
+  z-index: -1;
   margin: 3vh 0 0vh 3vw;
 
 }
@@ -235,7 +237,7 @@ body {
   justify-items: right;
   align-items: flex-end;
   font-size: 2.5vw;
-  z-index: 25;
+  z-index: 0;
   text-align: right;
 
   padding: 9vh 2vw 0 0;
